# service-bot

./: .gitignore  README.md  main.ipynb  pyproject.toml
dataset/: 1_パスワードリセット.lst  3_wifiの設定について.lst  4_プリンターの不具合について.lst  5_社内の共有フォルダにアクセスできない.lst
