[tool.poetry]
name = "service-bot"
version = "0.1.0"
description = ""
authors = ["purotoko <cook.shoya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.40.2"
torch = "^2.3.0"
unidic-lite = "^1.0.8"
fugashi = "^1.3.2"
scikit-learn = "^1.4.2"
accelerate = "^0.30.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
